2013-02-14  Maciej W. Rozycki  <macro@codesourcery.com>

	* binutils-all/mips/mixed-mips16.s: Add missing stack adjustment.
	* binutils-all/mips/mixed-mips16.d: Update accordingly.

2013-02-13  Maciej W. Rozycki  <macro@codesourcery.com>

	* binutils-all/mips/mixed-micromips.d: New test.
	* binutils-all/mips/mixed-mips16.d: New test.
	* binutils-all/mips/mixed-micromips.s: New test source.
	* binutils-all/mips/mixed-mips16.s: New test source.
	* binutils-all/mips/mips.exp: New file.

2012-12-17  Nick Clifton  <nickc@redhat.com>

	* binutils-all/windres/README: Add copyright notice.

2012-11-27  Roland McGrath  <mcgrathr@google.com>

	* lib/binutils-common.exp (is_zlib_supported): New function.
	* lib/utils-lib.exp (run_dump_test): If as options include
	--compress-debug-sections and zlib is not available, report
	the test as unsupported.
	* binutils-all/compress.exp: Bail out if zlib is not available.
	* binutils-all/objdump.exp (objdump compressed debug):
	Mark unsupported if zlib is not available.
	* binutils-all/readelf.exp (readelf_compressed_wa_test): Likewise.

2012-11-06  H.J. Lu  <hongjiu.lu@intel.com>

	PR binutils/14567
	* binutils-all/ar.exp (bfdtest1): Removed.
	(long_filenames): Take bfdtests.
	(thin_archive): Likewise.
	(thin_archive_with_nested): Likewise.
	(bfdtests): New.
	Pass $bfdtests to long_filenames, thin_archive and
	thin_archive_with_nested.

2012-10-29  Alan Modra  <amodra@gmail.com>

	* binutils-all/copy-3.d: Exclude all cygwin and mingw targets,
	and rs6000.

2012-10-24  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/ar.exp (bfdtest1): Remove findfile.

2012-10-21  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/dw2-1.W: Updated.

2012-10-20  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/compress.exp: Add an objdump test.
	* binutils-all/dw2-1.W: New file.

2012-08-17  H.J. Lu  <hongjiu.lu@intel.com>

	* binutils-all/ar.exp (long_filenames): Remove extra verbose
	before binutils_run.
	(thin_archive): Likewise.